// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependabot default 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
"
`;

exports[`dependabot private registries 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: 2
registries:
  npm-registry-npm-pkg-github-com:
    type: npm-registry
    url: https://npm.pkg.github.com
    token: \${{ secrets.TOKEN }}
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
"
`;
